fix the footer spacing with the added twitter handle

--- a/themes/sacre-davey/sass/_footer.scss
+++ b/themes/sacre-davey/sass/_footer.scss
@@ -55,7 +55,7 @@ footer {
     margin-right: 10px;
     font-size: 1.5rem;
     @include desktop {
-      
+
       margin-right: 5px;
       &:hover {
         background-color: $color__lightblue;
@@ -84,11 +84,23 @@ footer {
   margin: 30px auto;
   @include desktop {
     margin-right: 0;
-    padding-right: 5%;
+    padding: 0 5%;
+    min-width: 125px; 
   }
 }
 
-.social-media h1 {
-  font-size: 1rem;
+
+
+.social-media {
+  display: flex;
+  min-width: 222px;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+  h1 {
+    width:100%;
+    font-size: 1rem;
+  }
 }
 
