--- a/themes/sacre-davey/style.css
+++ b/themes/sacre-davey/style.css
@@ -1341,10 +1341,22 @@ footer {
   @media (min-width: 600px) {
     .more-info {
       margin-right: 0;
-      padding-right: 5%; } }
+      padding: 0 5%;
+      min-width: 125px; } }
 
-.social-media h1 {
-  font-size: 1rem; }
+.social-media {
+  display: -ms-flexbox;
+  display: flex;
+  min-width: 222px;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-flow: row wrap;
+      flex-flow: row wrap; }
+  .social-media h1 {
+    width: 100%;
+    font-size: 1rem; }
 
 /*---------------------------------------------------------
 
